tests/markups/fail-27.expected
ERROR: 'triple' is not a valid value for the 'underline' attribute on <span> tag, line 1; valid values are none/single/double/dashed/dotted/wavy